--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "front-end-sodexo": {
+    "front-end-noticias": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/front-end-sodexo",
+            "outputPath": "dist/front-end-noticias",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -61,10 +61,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "front-end-sodexo:build:production"
+              "browserTarget": "front-end-noticias:build:production"
             },
             "development": {
-              "browserTarget": "front-end-sodexo:build:development"
+              "browserTarget": "front-end-noticias:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -72,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "front-end-sodexo:build"
+            "browserTarget": "front-end-noticias:build"
           }
         },
         "test": {
